src/Bluetooth/Raw/SdpLib.hs


{-# LINE 107 "src/Bluetooth/Raw/SdpLib.hsc" #-}
foreign import ccall "sdp_uuid_cmp" c'sdp_uuid_cmp
  :: Ptr () -> Ptr () -> IO CInt
foreign import ccall "&sdp_uuid_cmp" p'sdp_uuid_cmp
  :: FunPtr (Ptr () -> Ptr () -> IO CInt)

{-# LINE 108 "src/Bluetooth/Raw/SdpLib.hsc" #-}
foreign import ccall "sdp_uuid_to_uuid128" c'sdp_uuid_to_uuid128
  :: Ptr C'uuid_t -> IO (Ptr C'uuid_t)
foreign import ccall "&sdp_uuid_to_uuid128" p'sdp_uuid_to_uuid128
  :: FunPtr (Ptr C'uuid_t -> IO (Ptr C'uuid_t))

{-# LINE 109 "src/Bluetooth/Raw/SdpLib.hsc" #-}
foreign import ccall "sdp_uuid16_to_uuid128" c'sdp_uuid16_to_uuid128
  :: Ptr C'uuid_t -> Ptr C'uuid_t -> IO ()
foreign import ccall "&sdp_uuid16_to_uuid128" p'sdp_uuid16_to_uuid128
  :: FunPtr (Ptr C'uuid_t -> Ptr C'uuid_t -> IO ())

{-# LINE 110 "src/Bluetooth/Raw/SdpLib.hsc" #-}
foreign import ccall "sdp_uuid32_to_uuid128" c'sdp_uuid32_to_uuid128
  :: Ptr C'uuid_t -> Ptr C'uuid_t -> IO ()
foreign import ccall "&sdp_uuid32_to_uuid128" p'sdp_uuid32_to_uuid128
  :: FunPtr (Ptr C'uuid_t -> Ptr C'uuid_t -> IO ())

{-# LINE 111 "src/Bluetooth/Raw/SdpLib.hsc" #-}
foreign import ccall "sdp_uuid128_to_uuid" c'sdp_uuid128_to_uuid
  :: Ptr C'uuid_t -> IO CInt
foreign import ccall "&sdp_uuid128_to_uuid" p'sdp_uuid128_to_uuid
  :: FunPtr (Ptr C'uuid_t -> IO CInt)

{-# LINE 112 "src/Bluetooth/Raw/SdpLib.hsc" #-}
foreign import ccall "sdp_uuid_to_proto" c'sdp_uuid_to_proto
  :: Ptr C'uuid_t -> IO CInt
foreign import ccall "&sdp_uuid_to_proto" p'sdp_uuid_to_proto
  :: FunPtr (Ptr C'uuid_t -> IO CInt)

{-# LINE 113 "src/Bluetooth/Raw/SdpLib.hsc" #-}
foreign import ccall "sdp_uuid_extract" c'sdp_uuid_extract
  :: Ptr CUChar -> CInt -> Ptr C'uuid_t -> Ptr CInt -> IO CInt
foreign import ccall "&sdp_uuid_extract" p'sdp_uuid_extract
  :: FunPtr (Ptr CUChar -> CInt -> Ptr C'uuid_t -> Ptr CInt -> IO CInt)

{-# LINE 114 "src/Bluetooth/Raw/SdpLib.hsc" #-}
{- #ccall sdp_uuid_print , Ptr <uuid_t> -> IO () -}
foreign import ccall "sdp_uuid2strn" c'sdp_uuid2strn
  :: Ptr C'uuid_t -> CString -> CSize -> IO CInt
foreign import ccall "&sdp_uuid2strn" p'sdp_uuid2strn
  :: FunPtr (Ptr C'uuid_t -> CString -> CSize -> IO CInt)

{-# LINE 116 "src/Bluetooth/Raw/SdpLib.hsc" #-}
foreign import ccall "sdp_proto_uuid2strn" c'sdp_proto_uuid2strn
  :: Ptr C'uuid_t -> CString -> CSize -> IO CInt
foreign import ccall "&sdp_proto_uuid2strn" p'sdp_proto_uuid2strn
  :: FunPtr (Ptr C'uuid_t -> CString -> CSize -> IO CInt)

{-# LINE 117 "src/Bluetooth/Raw/SdpLib.hsc" #-}
foreign import ccall "sdp_svclass_uuid2strn" c'sdp_svclass_uuid2strn
  :: Ptr C'uuid_t -> CString -> CSize -> IO CInt
foreign import ccall "&sdp_svclass_uuid2strn" p'sdp_svclass_uuid2strn
  :: FunPtr (Ptr C'uuid_t -> CString -> CSize -> IO CInt)

{-# LINE 118 "src/Bluetooth/Raw/SdpLib.hsc" #-}
foreign import ccall "sdp_profile_uuid2strn" c'sdp_profile_uuid2strn
  :: Ptr C'uuid_t -> CString -> CSize -> IO CInt
foreign import ccall "&sdp_profile_uuid2strn" p'sdp_profile_uuid2strn
  :: FunPtr (Ptr C'uuid_t -> CString -> CSize -> IO CInt)

{-# LINE 119 "src/Bluetooth/Raw/SdpLib.hsc" #-}
foreign import ccall "sdp_get_access_protos" c'sdp_get_access_protos
  :: Ptr C'sdp_record_t -> Ptr (Ptr C'_sdp_list) -> IO CInt
foreign import ccall "&sdp_get_access_protos" p'sdp_get_access_protos
  :: FunPtr (Ptr C'sdp_record_t -> Ptr (Ptr C'_sdp_list) -> IO CInt)

{-# LINE 120 "src/Bluetooth/Raw/SdpLib.hsc" #-}
foreign import ccall "sdp_get_add_access_protos" c'sdp_get_add_access_protos
  :: Ptr C'sdp_record_t -> Ptr (Ptr C'_sdp_list) -> IO CInt
foreign import ccall "&sdp_get_add_access_protos" p'sdp_get_add_access_protos
  :: FunPtr (Ptr C'sdp_record_t -> Ptr (Ptr C'_sdp_list) -> IO CInt)

{-# LINE 121 "src/Bluetooth/Raw/SdpLib.hsc" #-}
{- #cinline sdp_get_browse_groups , Ptr <sdp_record_t> -> Ptr (Ptr <struct _sdp_list>) -> IO CInt -}
foreign import ccall "sdp_get_lang_attr" c'sdp_get_lang_attr
  :: Ptr C'sdp_record_t -> Ptr (Ptr C'_sdp_list) -> IO CInt
foreign import ccall "&sdp_get_lang_attr" p'sdp_get_lang_attr
  :: FunPtr (Ptr C'sdp_record_t -> Ptr (Ptr C'_sdp_list) -> IO CInt)

{-# LINE 123 "src/Bluetooth/Raw/SdpLib.hsc" #-}
foreign import ccall "sdp_get_profile_descs" c'sdp_get_profile_descs
  :: Ptr C'sdp_record_t -> Ptr (Ptr C'_sdp_list) -> IO CInt
foreign import ccall "&sdp_get_profile_descs" p'sdp_get_profile_descs
  :: FunPtr (Ptr C'sdp_record_t -> Ptr (Ptr C'_sdp_list) -> IO CInt)

{-# LINE 124 "src/Bluetooth/Raw/SdpLib.hsc" #-}
foreign import ccall "sdp_get_server_ver" c'sdp_get_server_ver
  :: Ptr C'sdp_record_t -> Ptr (Ptr C'_sdp_list) -> IO CInt
foreign import ccall "&sdp_get_server_ver" p'sdp_get_server_ver
  :: FunPtr (Ptr C'sdp_record_t -> Ptr (Ptr C'_sdp_list) -> IO CInt)

{-# LINE 125 "src/Bluetooth/Raw/SdpLib.hsc" #-}
foreign import ccall "sdp_get_service_id" c'sdp_get_service_id
  :: Ptr C'sdp_record_t -> Ptr C'uuid_t -> IO CInt
foreign import ccall "&sdp_get_service_id" p'sdp_get_service_id
  :: FunPtr (Ptr C'sdp_record_t -> Ptr C'uuid_t -> IO CInt)

{-# LINE 126 "src/Bluetooth/Raw/SdpLib.hsc" #-}
foreign import ccall "sdp_get_group_id" c'sdp_get_group_id
  :: Ptr C'sdp_record_t -> Ptr C'uuid_t -> IO CInt
foreign import ccall "&sdp_get_group_id" p'sdp_get_group_id
  :: FunPtr (Ptr C'sdp_record_t -> Ptr C'uuid_t -> IO CInt)

{-# LINE 127 "src/Bluetooth/Raw/SdpLib.hsc" #-}
foreign import ccall "sdp_get_record_state" c'sdp_get_record_state
  :: Ptr C'sdp_record_t -> Ptr CUInt -> IO CInt
foreign import ccall "&sdp_get_record_state" p'sdp_get_record_state
  :: FunPtr (Ptr C'sdp_record_t -> Ptr CUInt -> IO CInt)

{-# LINE 128 "src/Bluetooth/Raw/SdpLib.hsc" #-}
foreign import ccall "sdp_get_service_avail" c'sdp_get_service_avail
  :: Ptr C'sdp_record_t -> Ptr CUChar -> IO CInt
foreign import ccall "&sdp_get_service_avail" p'sdp_get_service_avail
  :: FunPtr (Ptr C'sdp_record_t -> Ptr CUChar -> IO CInt)

{-# LINE 129 "src/Bluetooth/Raw/SdpLib.hsc" #-}
foreign import ccall "sdp_get_service_ttl" c'sdp_get_service_ttl
  :: Ptr C'sdp_record_t -> Ptr CUInt -> IO CInt
foreign import ccall "&sdp_get_service_ttl" p'sdp_get_service_ttl
  :: FunPtr (Ptr C'sdp_record_t -> Ptr CUInt -> IO CInt)

{-# LINE 130 "src/Bluetooth/Raw/SdpLib.hsc" #-}
foreign import ccall "sdp_get_database_state" c'sdp_get_database_state
  :: Ptr C'sdp_record_t -> Ptr CUInt -> IO CInt
foreign import ccall "&sdp_get_database_state" p'sdp_get_database_state
  :: FunPtr (Ptr C'sdp_record_t -> Ptr CUInt -> IO CInt)

{-# LINE 131 "src/Bluetooth/Raw/SdpLib.hsc" #-}
{- #cinline sdp_get_service_name , Ptr <sdp_record_t> -> CString -> CInt -> IO CInt -}
{- #cinline sdp_get_service_desc , Ptr <sdp_record_t> -> CString -> CInt -> IO CInt -}
{- #cinline sdp_get_provider_name , Ptr <sdp_record_t> -> CString -> CInt -> IO CInt -}
{- #cinline sdp_get_doc_url , Ptr <sdp_record_t> -> CString -> CInt -> IO CInt -}
{- #cinline sdp_get_clnt_exec_url , Ptr <sdp_record_t> -> CString -> CInt -> IO CInt -}
{- #cinline sdp_get_icon_url , Ptr <sdp_record_t> -> CString -> CInt -> IO CInt -}
foreign import ccall "sdp_set_supp_feat" c'sdp_set_supp_feat
  :: Ptr C'sdp_record_t -> Ptr C'_sdp_list -> IO CInt
foreign import ccall "&sdp_set_supp_feat" p'sdp_set_supp_feat
  :: FunPtr (Ptr C'sdp_record_t -> Ptr C'_sdp_list -> IO CInt)

{-# LINE 138 "src/Bluetooth/Raw/SdpLib.hsc" #-}
foreign import ccall "sdp_get_supp_feat" c'sdp_get_supp_feat
  :: Ptr C'sdp_record_t -> Ptr (Ptr C'_sdp_list) -> IO CInt
foreign import ccall "&sdp_get_supp_feat" p'sdp_get_supp_feat
  :: FunPtr (Ptr C'sdp_record_t -> Ptr (Ptr C'_sdp_list) -> IO CInt)

{-# LINE 139 "src/Bluetooth/Raw/SdpLib.hsc" #-}
foreign import ccall "sdp_extract_pdu" c'sdp_extract_pdu
  :: Ptr CUChar -> CInt -> Ptr CInt -> IO (Ptr C'sdp_record_t)
foreign import ccall "&sdp_extract_pdu" p'sdp_extract_pdu
  :: FunPtr (Ptr CUChar -> CInt -> Ptr CInt -> IO (Ptr C'sdp_record_t))

{-# LINE 140 "src/Bluetooth/Raw/SdpLib.hsc" #-}
foreign import ccall "sdp_copy_record" c'sdp_copy_record
  :: Ptr C'sdp_record_t -> IO (Ptr C'sdp_record_t)
foreign import ccall "&sdp_copy_record" p'sdp_copy_record
  :: FunPtr (Ptr C'sdp_record_t -> IO (Ptr C'sdp_record_t))

{-# LINE 141 "src/Bluetooth/Raw/SdpLib.hsc" #-}
{- #ccall sdp_data_print , Ptr <struct sdp_data_struct> -> IO () -}
{- #ccall sdp_print_service_attr , Ptr <struct _sdp_list> -> IO () -}
foreign import ccall "sdp_attrid_comp_func" c'sdp_attrid_comp_func
  :: Ptr () -> Ptr () -> IO CInt
foreign import ccall "&sdp_attrid_comp_func" p'sdp_attrid_comp_func
  :: FunPtr (Ptr () -> Ptr () -> IO CInt)

{-# LINE 144 "src/Bluetooth/Raw/SdpLib.hsc" #-}
foreign import ccall "sdp_set_seq_len" c'sdp_set_seq_len
  :: Ptr CUChar -> CUInt -> IO ()
foreign import ccall "&sdp_set_seq_len" p'sdp_set_seq_len
  :: FunPtr (Ptr CUChar -> CUInt -> IO ())

{-# LINE 145 "src/Bluetooth/Raw/SdpLib.hsc" #-}
foreign import ccall "sdp_set_attrid" c'sdp_set_attrid
  :: Ptr C'sdp_buf_t -> CUShort -> IO ()
foreign import ccall "&sdp_set_attrid" p'sdp_set_attrid
  :: FunPtr (Ptr C'sdp_buf_t -> CUShort -> IO ())

{-# LINE 146 "src/Bluetooth/Raw/SdpLib.hsc" #-}
foreign import ccall "sdp_append_to_pdu" c'sdp_append_to_pdu
  :: Ptr C'sdp_buf_t -> Ptr C'sdp_data_struct -> IO ()
foreign import ccall "&sdp_append_to_pdu" p'sdp_append_to_pdu
  :: FunPtr (Ptr C'sdp_buf_t -> Ptr C'sdp_data_struct -> IO ())

{-# LINE 147 "src/Bluetooth/Raw/SdpLib.hsc" #-}
foreign import ccall "sdp_append_to_buf" c'sdp_append_to_buf
  :: Ptr C'sdp_buf_t -> Ptr CUChar -> CUInt -> IO ()
foreign import ccall "&sdp_append_to_buf" p'sdp_append_to_buf
  :: FunPtr (Ptr C'sdp_buf_t -> Ptr CUChar -> CUInt -> IO ())

{-# LINE 148 "src/Bluetooth/Raw/SdpLib.hsc" #-}
foreign import ccall "sdp_gen_pdu" c'sdp_gen_pdu
  :: Ptr C'sdp_buf_t -> Ptr C'sdp_data_struct -> IO CInt
foreign import ccall "&sdp_gen_pdu" p'sdp_gen_pdu
  :: FunPtr (Ptr C'sdp_buf_t -> Ptr C'sdp_data_struct -> IO CInt)

{-# LINE 149 "src/Bluetooth/Raw/SdpLib.hsc" #-}
foreign import ccall "sdp_gen_record_pdu" c'sdp_gen_record_pdu
  :: Ptr C'sdp_record_t -> Ptr C'sdp_buf_t -> IO CInt
foreign import ccall "&sdp_gen_record_pdu" p'sdp_gen_record_pdu
  :: FunPtr (Ptr C'sdp_record_t -> Ptr C'sdp_buf_t -> IO CInt)

{-# LINE 150 "src/Bluetooth/Raw/SdpLib.hsc" #-}
foreign import ccall "sdp_extract_seqtype" c'sdp_extract_seqtype
  :: Ptr CUChar -> CInt -> Ptr CUChar -> Ptr CInt -> IO CInt
foreign import ccall "&sdp_extract_seqtype" p'sdp_extract_seqtype
  :: FunPtr (Ptr CUChar -> CInt -> Ptr CUChar -> Ptr CInt -> IO CInt)

{-# LINE 151 "src/Bluetooth/Raw/SdpLib.hsc" #-}
foreign import ccall "sdp_extract_attr" c'sdp_extract_attr
  :: Ptr CUChar -> CInt -> Ptr CInt -> Ptr C'sdp_record_t -> IO (Ptr C'sdp_data_struct)
foreign import ccall "&sdp_extract_attr" p'sdp_extract_attr
  :: FunPtr (Ptr CUChar -> CInt -> Ptr CInt -> Ptr C'sdp_record_t -> IO (Ptr C'sdp_data_struct))

{-# LINE 152 "src/Bluetooth/Raw/SdpLib.hsc" #-}
foreign import ccall "sdp_pattern_add_uuid" c'sdp_pattern_add_uuid
  :: Ptr C'sdp_record_t -> Ptr C'uuid_t -> IO ()
foreign import ccall "&sdp_pattern_add_uuid" p'sdp_pattern_add_uuid
  :: FunPtr (Ptr C'sdp_record_t -> Ptr C'uuid_t -> IO ())

{-# LINE 153 "src/Bluetooth/Raw/SdpLib.hsc" #-}
foreign import ccall "sdp_pattern_add_uuidseq" c'sdp_pattern_add_uuidseq
  :: Ptr C'sdp_record_t -> Ptr C'_sdp_list -> IO ()
foreign import ccall "&sdp_pattern_add_uuidseq" p'sdp_pattern_add_uuidseq
  :: FunPtr (Ptr C'sdp_record_t -> Ptr C'_sdp_list -> IO ())

{-# LINE 154 "src/Bluetooth/Raw/SdpLib.hsc" #-}
foreign import ccall "sdp_send_req_w4_rsp" c'sdp_send_req_w4_rsp
  :: Ptr C'sdp_session_t -> Ptr CUChar -> Ptr CUChar -> CUInt -> Ptr CUInt -> IO CInt
foreign import ccall "&sdp_send_req_w4_rsp" p'sdp_send_req_w4_rsp
  :: FunPtr (Ptr C'sdp_session_t -> Ptr CUChar -> Ptr CUChar -> CUInt -> Ptr CUInt -> IO CInt)
